<resources>
    <string name="app_name">MY APP</string>
    <string name="switchtext_on">Switch is on</string>
    <string name="switchtext_off">Switch is off</string>
    <string name="checkbox_check">Checkbox is checked</string>
    <string name="checkbox_uncheck">Checkbox is unchecked</string>
    <string name="radiobtn_check">Radiobutton is checked</string>
    <string name="radiobtn_uncheck">Radiobutton is unchecked</string>
    <string name="search">Search</string>
    <string name="gps">Gps</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="refresh_toast">You have clicked on refresh button.Wait for some time to get refreshed. </string>
    <string name="help_toast">You can email us regarding the topic you need help.</string>
    <string name="check_for_updates_toast">We are looking for the updates.</string>

    <string-array name="fruits">
        <item>Apple</item>
        <item>Mango</item>
        <item>Banana</item>
        <item>Orange</item>
        <item>Guava</item>
        <item>Kiwi</item>
    </string-array>


    <string-array name="vessel_type">
        <item>Powerboat</item>
        <item>Sailboat</item>
        <item>Tugboat</item>
        <item>Freighter</item>
        <item>Personal Water Craft</item>
        <item>Barge</item>
        <item>Dredger</item>
        <item>Commercial Boat</item>
        <item>Fishing Boat</item>
    </string-array>

    <string-array name="flight_class">
        <item>All</item>
        <item>Business</item>
        <item>First</item>
        <item>Economy</item>
    </string-array>


    <string-array name="date">
        <item>Apr 20,2018</item>
        <item>Mar 19,2017</item>
        <item>July 22,2018</item>
        <item>Nov 9,1996</item>
        <item>Jan 1,2001</item>
    </string-array>


    <string-array name="data">
        <item>data at pos 0</item>
        <item>data at pos 1</item>
        <item>data at pos 2</item>
        <item>data at pos 3</item>
        <item>data at pos 4</item>
        <item>data at pos 5</item>
        <item>data at pos 6</item>
        <item>data at pos 7</item>
        <item>data at pos 8</item>
        <item>data at pos 9</item>
        <item>data at pos 10</item>
        <item>data at pos 11</item>
        <item>data at pos 12</item>
        <item>data at pos 13</item>
        <item>data at pos 14</item>
        <item>data at pos 15</item>
        <item>data at pos 16</item>
        <item>data at pos 17</item>
        <item>data at pos 18</item>
        <item>data at pos 19</item>
        <item>data at pos 20</item>
        <item>data at pos 21</item>
        <item>data at pos 22</item>
        <item>data at pos 23</item>
        <item>data at pos 24</item>
        <item>data at pos 25</item>
        <item>data at pos 26</item>
        <item>data at pos 27</item>
        <item>data at pos 28</item>
        <item>data at pos 29</item>
        <item>data at pos 30</item>
        <item>data at pos 31</item>
        <item>data at pos 32</item>
        <item>data at pos 33</item>
        <item>data at pos 34</item>
        <item>data at pos 35</item>
        <item>data at pos 36</item>
        <item>data at pos 37</item>
        <item>data at pos 38</item>
        <item>data at pos 39</item>
        <item>data at pos 40</item>
        <item>data at pos 41</item>
        <item>data at pos 42</item>
        <item>data at pos 43</item>
        <item>data at pos 44</item>
        <item>data at pos 45</item>
        <item>data at pos 46</item>
        <item>data at pos 47</item>
        <item>data at pos 48</item>
        <item>data at pos 49</item>
    </string-array>


    <string-array name="viewpager_title">
        <item>The Hauge to Southwold</item>
        <item>Washington Journey</item>
        <item>Goa tour</item>
        <item>Washington Tour</item>
        <item>SouthWald</item>
    </string-array>


    <string name="length_format">Length is %1$s</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>

    <string name="gps_toast">Searching for your location</string>
    <string name="image_description">It is the test image</string>
    <string name="header">HEADER</string>
    <string name="footer">FOOTER</string>
    <string name="signup_label">Sign up</string>
    <string name="signup_button">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="phone_no">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral_code">Enter referral code (Optional) </string>
    <string name="signup_policy">By signing up you agree to our\n Privacy Policy and Terms of Service</string>

    <string name="ourValues_label">ourValues</string>
    <string name="editvesel_label">Edit vessel details</string>
    <string name="save">Save</string>
    <string name="vessel_details">vessel details</string>
    <string name="additional_info">additional information</string>
    <string name="fragment_label">My Complete Project</string>

    <string name="my_course">MYCOURSE</string>
    <string name="bookmarked">BOOKMARKED</string>
    <string name="nearby">NEARBY</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">chike mgbemena</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="alert_1">Alert_1</string>
    <string name="alert_2">Alert_2</string>
    <string name="choice_list">Choice List</string>
    <string name="single_choice_list">Single Choice List</string>
    <string name="multiple_choice_list">Multiple Choice List</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="time_picker">Time Picker</string>
    <string name="date_picker">Date Picker</string>
    <string name="popup">PopUp</string>

    <string name="missile">Missile</string>
    <string name="cancel">Cancel</string>
    <string name="fire">Fire</string>
    <string name="alert_message_2">Hi, You all have to done your task till evening.</string>
    <string name="click_me">CLICK ME</string>
    <string name="enter_the_digit_multiple_of_2">Enter the digit (multiple of 2)</string>
    <string name="you_are_already_a_member_of_maccabi_usa">You are already a member of Maccabi USA</string>
    <string name="all_members_details">All Members Details</string>
    <string name="likes">Likes</string>
    <string name="title_activity_maccabi_content_home">MaccabiContentHomeActivity</string>


    <string name="monuments">MONUMENTS</string>
    <string name="flowers">FLOWERS</string>
    <string name="landscapes">LANDSCAPES</string>
    <string name="waterfalls">WATERFALLS</string>
    <string name="foods">FOODS</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

</resources>
