<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".SharedPreferenceAssignment.SharedPreferencesActivity">


        <android.support.v7.widget.Toolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_purple"
            >

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/width_20"
                android:layout_height="@dimen/height_20"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signup_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/margin_20" />
        </android.support.v7.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_20">



                            <EditText
                                android:id="@+id/edittext_first_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/info_box"
                                android:hint="@string/first_name"
                                android:layout_marginBottom="@dimen/margin_20"
                                android:padding="@dimen/margin_10"/>
                            <EditText
                                android:id="@+id/edittext_last_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/info_box"
                                android:hint="@string/last_name"
                                android:padding="@dimen/margin_10"/>





                    <EditText
                        android:id="@+id/edittext_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/info_box"
                        android:hint="@string/username"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_20"
                        android:padding="@dimen/margin_10"/>
                    <EditText
                        android:id="@+id/edittext_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/info_box"
                        android:hint="@string/phone_no"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:padding="@dimen/margin_10"/>
                    <EditText
                        android:id="@+id/edittext_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/info_box"
                        android:hint="@string/email"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:padding="@dimen/margin_10"/>
                    <EditText
                        android:id="@+id/edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/info_box"
                        android:hint="@string/password"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:padding="@dimen/margin_10"/>
                    <EditText
                        android:id="@+id/edittext_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/info_box"
                        android:hint="@string/confirm_password"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:padding="@dimen/margin_10"/>
                    <EditText
                        android:id="@+id/edittext_optional_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/info_box"
                        android:hint="@string/referral_code"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:padding="@dimen/margin_10"/>

                    <TextView
                        android:id="@+id/signup_policy_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:textSize="@dimen/textsize_15"
                        android:gravity="center"

                        />




                </LinearLayout>
                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_button"
                    android:textSize="@dimen/textsize_20"
                    android:textColor="@android:color/white"
                    android:background="@color/color_purple"/>

            </LinearLayout>

        </ScrollView>




    </LinearLayout>

