<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Button.CompoundBtnAssignment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"
            android:checked="true"
            />
        <TextView
            android:id="@+id/textview_5"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/switchtext_on"
            />



        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showText="true"

            />
        <TextView
            android:id="@+id/textview_6"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/switchtext_off"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkbox_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"

            />
        <TextView
            android:id="@+id/textview_1"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/checkbox_uncheck"
            />

        <CheckBox
            android:id="@+id/checkbox_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <TextView
            android:id="@+id/textview_2"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/checkbox_uncheck"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radiobutton_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </RadioGroup>
        <TextView
            android:id="@+id/textview_3"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/radiobtn_uncheck"/>


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radiobutton_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </RadioGroup>
        <TextView
            android:id="@+id/textview_4"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/radiobtn_uncheck"/>




    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Radio Group"
            android:textSize="@dimen/textsize_22"
            android:textColor="@color/color_black"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choice 1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choice 2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choice 3"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choice 4"/>
        </RadioGroup>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"/>
        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
