<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Assignment.EditVesselDetails">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_brown">
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/width_20"
            android:layout_height="@dimen/height_20"
            android:src="@drawable/left_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editvesel_label"
            android:textColor="@android:color/white"
            android:textStyle="bold"

            android:paddingLeft="@dimen/margin_20"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/save_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vessel_details"
                android:textAllCaps="true"
                android:background="@color/color_greyvessel"

                android:padding="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                   />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Call Sign"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                   />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="Upload photo"/>

                    <ImageView
                        android:layout_width="@dimen/width_30"
                        android:layout_height="@dimen/height_30"
                        android:src="@drawable/ic_edit_pic"
                        android:layout_alignParentRight="true"/>

                </RelativeLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional_info"

                android:background="@color/color_greyvessel"
                android:padding="@dimen/margin_10"
                android:textAllCaps="true"
                android:layout_marginLeft="@dimen/margin_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MMSI Number"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Vessel Type"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20">

                </Spinner>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Length(feets)"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Width(feets)"

                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Depth(feets)"

                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_20"
                        android:textColor="@color/color_black"
                        android:layout_weight="1"
                        />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_20"
                        android:textColor="@color/color_black"
                        android:layout_weight="1"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_black"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_weight="1"/>
                </LinearLayout>


            </LinearLayout>



        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_blue_vessel"
        android:text="@string/save"
        android:textSize="@dimen/textsize_20"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
      />

</RelativeLayout>